litle fron-end for index.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Főoldal</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-Ez a fooldalunk.
+<div class="container">
+    <span class="text1">Ez a fooldalunk.</span>
+    <span class="text2">kiskereknek</span>
+</div>
 
 </body>
 
