--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,7 +1,27 @@
 
 * {
+    padding: 0;
+    margin: 0;
+    font-family: sans-serif;
     box-sizing: border-box;
 }
+body{
+    background: #000;
+}
+.container{
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 100%;
+}
+.container span{
+    color: white;
+    text-transform: uppercase;
+    display: block;
+ }
+
 
 #container {
     width: 80%;
@@ -11,7 +31,33 @@
     justify-content: flex-start;
     align-items: flex-start;
 }
-
+.text1{
+    font-size: 60px;
+    font-weight: 700;
+    letter-spacing: 8px;
+    margin-bottom: 20px;
+    background: black;
+    position: relative;
+    animation: text 3s 1;
+}
+.text2{
+    font-size: 30px;
+    color: #6ab04c;
+}
+@keyframes text {
+    0%{
+        color: black;
+        margin-bottom: -40px;
+    }
+    30%{
+        letter-spacing: 25px;
+        margin-bottom: -40px;
+    }
+    85%{
+        letter-spacing: 8px;
+        margin-bottom: -40px;
+    }
+}
 
 #content {
     width: 100%;
