litle fron-end for index.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,12 @@
 <div class="container">
     <span class="text1">Ez a fooldalunk.</span>
     <span class="text2">kiskereknek</span>
+    <div class="button1">
+        <a href="#" class="btn">Regisztráció</a>
+        <a href="#" class="btn">Bejelentkezés</a>
+    </div>
 </div>
+
 
 </body>
 
