--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -21,8 +21,6 @@ body{
     text-transform: uppercase;
     display: block;
  }
-
-
 #container {
     width: 80%;
     margin: 30px auto;
@@ -41,9 +39,11 @@ body{
     animation: text 3s 1;
 }
 .text2{
-    font-size: 30px;
+    font-size: 40px;
+    margin-bottom: 20px;
     color: #6ab04c;
 }
+
 @keyframes text {
     0%{
         color: black;
@@ -57,6 +57,24 @@ body{
         letter-spacing: 8px;
         margin-bottom: -40px;
     }
+}
+.button1{
+    padding: 10px;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.btn{
+    border: 1px solid #fff;
+    padding: 5px 10px;
+    color: #fff;
+    text-decoration: none;
+    transition: 0.6s ease;
+}
+.btn:hover{
+    background:#fff;
+    color: #000;
 }
 
 #content {
