--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -77,6 +77,19 @@ body{
     color: #000;
 }
 
+.social-icons{
+    position: absolute;
+    right: 5%;
+    bottom: 8%
+
+}
+.social-icons img{
+    width: 30px;
+    display: block;
+    margin: 25px 5px;
+}
+
+
 #content {
     width: 100%;
     padding: 30px;
