--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,11 +12,10 @@
     <span class="text1">Ez a fooldalunk.</span>
     <span class="text2">kiskereknek</span>
     <div class="button1">
-        <a href="#" class="btn">Regisztráció</a>
+        <a href="/register" class="btn">Regisztráció</a>
         <a href="#" class="btn">Bejelentkezés</a>
     </div>
 </div>
-
 
 </body>
 
