--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -15,7 +15,7 @@
             <div>
                 <label>Cég név:</label>
                 <div>
-                    <input type="text" data-th-field="*{companyName}" />
+                    <input type="text" data-th-field="*{companyName}" required />
                 </div>
             </div>
         </div>
