login hozzadva az indexhez

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
     <span class="text2">kiskereknek</span>
     <div class="button1">
         <a href="/register" class="btn">Regisztráció</a>
-        <a href="#" class="btn">Bejelentkezés</a>
+        <a href="/login" class="btn">Bejelentkezés</a>
     </div>
 </div>
 
