--- a/src/main/resources/templates/register_success.html
+++ b/src/main/resources/templates/register_success.html
@@ -3,15 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Registration Succeeded</title>
-  >
 </head>
 <body>
 <div>
   <div>
     <h3>You have registered succesfully</h3>
-    <h4><a th:href="@{login}">Click here to Log IN</a></h4>
+    <h4><a th:href="@{/index}">Click here to Log IN</a></h4>
   </div>
-
 </div>
 </body>
 </html>
