--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -9,7 +9,7 @@
     <h1>Regisztráció</h1>
 </div>
 <div>
-    <form data-th-action="@{/register}" method="post"
+    <form data-th-action="@{/process-register}" method="post"
         data-th-object="${user}">
         <div>
             <div>
