login hozzadva az indexhez v2.0

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,8 +9,8 @@
 <body>
 
 <div class="container">
-    <span class="text1">Ez a fooldalunk.</span>
-    <span class="text2">kiskereknek</span>
+    <span class="text1">Ez a belépőoldalunk.</span>
+    <span class="text2">Csak kiskereknek</span>
     <div class="button1">
         <a href="/register" class="btn">Regisztráció</a>
         <a href="/login" class="btn">Bejelentkezés</a>
