--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div>
-            <button type="submit">Regisztráció</button>
+            <input class="send_button" type="submit" value="Send">
             <span>Már regisztráltál?<a href="/"th:href="@{/login}">Jelentkezz be itt</a></span>
         </div>
     </form>
