login hozzadva az indexhez v3.0

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 
 <div class="container">
     <span class="text1">Ez a belépőoldalunk.</span>
-    <span class="text2">Csak kiskereknek</span>
+    <span class="text2">Csak kiskereskedéseknek</span>
     <div class="button1">
         <a href="/register" class="btn">Regisztráció</a>
         <a href="/login" class="btn">Bejelentkezés</a>
