--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,7 @@
       <p>
         Welcome <b>[[${#request.userPrincipal.principal.companyName}]]</b>
       </p>
-      <input type="submit" value="Sign Out">
+      <input type="submit" class="btn" value="Sign Out">
     </form>
   </div>
 </div>
