--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
-    <link rel="stylesheet" href="../static/registerloginstyle.css">
+    <link rel="stylesheet" href="registerloginstyle.css">
 </head>
 <body>
 <div>
