--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
             <input type="text" data-th-name="email" placeholder="E-mail">
             <input type="password" data-th-name="password" placeholder="Jelszó">
 
-            <input class="send_button" type="submit" value="Bejelentkezés!">
+            <button >Belépés</button>
         </form>
     </div>
 </div>
