--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -68,6 +68,7 @@ body{
 .btn{
     border: 1px solid #fff;
     padding: 5px 10px;
+    border-radius: 5px;
     color: #fff;
     text-decoration: none;
     transition: 0.6s ease;
