--- a/src/main/resources/templates/loggedin.html
+++ b/src/main/resources/templates/loggedin.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Logged in</title>
+    <link rel="stylesheet" href="/loginstyle.css">
 </head>
 <body>
-<h3> Már be vagy jelentkezve </h3>
-<button>Vissza a főoldaltra</button>
+<div id="container">
+    <div class="form">
+        <form class="form" data-th-action="@{/login}" method="post">
+            <h3>Már be vagy jelentkezve </h3>
+            <button class="button" onclick="location.href= '/home'" type="button">
+                Vissza a főoldalra</button>
+        </form>
+    </div>
+</div>
 </body>
 </html>
