--- a/src/main/resources/templates/register_success.html
+++ b/src/main/resources/templates/register_success.html
@@ -9,6 +9,7 @@
 <div>
   <div>
     <h3>You have registered succesfully</h3>
+    <p>Please check your email to verify your account</p>
     <h4><a th:href="@{/index}">Click here to Log IN</a></h4>
   </div>
 </div>
