--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -9,7 +9,7 @@
 <div>
 </div>
 <div>
-    <form data-th-action="@{/process-register}" method="post"
+    <form th:action="@{/process-register}" method="post"
         data-th-object="${user}">
         <h3>Regisztráció</h3>
         <div>
