--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -62,7 +62,7 @@
         </div>
         <div>
             <button >Regisztráció</button>
-            <span>Már regisztráltál?<a href="/"th:href="@{/login}">Jelentkezz be itt</a></span>
+            <span>Már regisztráltál?<a href="/static" th:href="@{/login}">Jelentkezz be itt</a></span>
         </div>
     </form>
 </div>
