--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,8 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Főoldal</title>
+  <link rel="stylesheet" href="/homestyle.css">
 </head>
 <body>
+<div class="banner">
+  <div class="navbar">
+    <img src="#" class="logo">
+    <ul>
+      <li><a href="#">Home</a></li>
+    </ul>
+  </div>
+
+</div>
 <div>
   <div>
     <form th:action="@{/logout}" method="post">
