--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:C="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8">
   <title>Főoldal</title>
@@ -8,22 +8,25 @@
 <body>
 <div class="banner">
   <div class="navbar">
-    <img src="#" class="logo">
+    <img data-th-src="@{sales2.png}" class="logo">
     <ul>
       <li><a href="#">Home</a></li>
+      <li><a href="#">Home</a></li>
+      <li><a data-th-href="@{/userprofile}">Account</a></li>
     </ul>
   </div>
-
-</div>
-<div>
-  <div>
+  <div class="welcomemessage">
     <form th:action="@{/logout}" method="post">
       <p>
         Welcome <b>[[${#request.userPrincipal.principal.companyName}]]</b>
       </p>
-      <input type="submit" class="btn" value="Sign Out">
+
     </form>
   </div>
+  <footer>
+    <input type="submit" class="btn" value="Sign Out">
+  </footer>
 </div>
+
 </body>
 </html>
