--- a/src/main/resources/static/homestyle.css
+++ b/src/main/resources/static/homestyle.css
@@ -3,6 +3,20 @@
     padding: 0;
     font-family: sans-serif;
 }
+.btn{
+    color: #ffffff;
+    background-color: #34a290;
+    font-size: 10px;
+    border: 0px solid #2d63c8;
+    border-radius: 100px;
+    padding: 15px 50px;
+    letter-spacing: 3px;
+    cursor: pointer
+}
+btn:hover {
+    color: #ffffff;
+    background-color: #3a9283;
+}
 .banner{
     width: 100%;
     height: 100vh;
@@ -13,7 +27,7 @@
 .navbar{
     width: 85% ;
     margin: auto;
-    padding: 35px 0;
+    padding: 0px 0;
     display: flex;
     align-items: center;
     justify-content:space-between ;
