--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -7,6 +7,7 @@
 <body>
 <h2>
   Welcome <b>[[${#request.userPrincipal.principal.companyName}]]</b>
+  <p data-th-text="${income}"></p>
 </h2>
 </body>
 </html>
