--- a/src/main/resources/static/homestyle.css
+++ b/src/main/resources/static/homestyle.css
@@ -3,13 +3,26 @@
     padding: 0;
     font-family: sans-serif;
 }
+.social-icons h5{
+    color: white;
+}
+.social-icons{
+    position: absolute;
+    right: 4%;
+    bottom: 0%
+
+}
+.social-icons img{
+    width: 30px;
+    margin: 25px 5px;
+}
 .btn{
     color: #ffffff;
     background-color: #34a290;
     font-size: 10px;
     border: 0px solid #2d63c8;
     border-radius: 100px;
-    padding: 15px 50px;
+    padding: 15px 15px;
     letter-spacing: 3px;
     cursor: pointer
 }
