--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -25,6 +25,12 @@
       </form>
     </div>
   </div>
+  <div class="social-icons">
+    <h5>Kövess minket!</h5>
+    <a href="https://facebook.com/"> <img data-th-src="@{facebook.png}"> </a>
+    <a href="https://www.instagram.com/"> <img data-th-src="@{instagram.png}"> </a>
+    <a href="https://www.linkedin.com/"> <img data-th-src="@{linkedin.png}"> </a>
+  </div>
 </div>
 
 </body>
