--- a/src/main/resources/static/loginstyle.css
+++ b/src/main/resources/static/loginstyle.css
@@ -8,6 +8,10 @@
 body{
     background-color: #080710;
 }
+.alert-danger{
+    color: red;
+    text-align: center;
+}
 .background{
     width: 430px;
     height: 520px;
