--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,6 +13,9 @@
     <div class="form">
         <form class="form" data-th-action="@{/login}" method="post">
             <h3>Belépés</h3>
+            <div class="alert-danger" th:if="${param.error}">
+                Hibás e-mail vagy jelszó.
+            </div>
             <input type="text" data-th-name="email" placeholder="E-mail">
             <input type="password" data-th-name="password" placeholder="Jelszó">
 
