--- a/src/main/resources/static/registerstyle.css
+++ b/src/main/resources/static/registerstyle.css
@@ -121,3 +121,17 @@ button{
 .social i{
     margin-right: 4px;
 }
+.newpassword form{
+    height: 300px;
+    width: 400px;
+    background-color: rgba(255,255,255,0.13);
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 380px;
+    left: 50%;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    border: 2px solid rgba(255,255,255,0.1);
+    box-shadow: 0 0 40px rgba(8,7,16,0.6);
+    padding: 50px 35px;
+}
