--- a/src/main/resources/templates/changepassword.html
+++ b/src/main/resources/templates/changepassword.html
@@ -11,7 +11,9 @@
 <form data-th-action="@{/changepassword}" data-th-object="${form}" method="post">
     <table>
         <tr>
-            <th data-th-if="${loginError}">Something went wrong!</th>
+            <td class="alert-danger" th:if="${param.error}">
+                Hibás e-mail vagy jelszó.
+            </td>
         </tr>
         <tr>
             <th>Current password:</th>
