--- a/src/main/resources/static/homestyle.css
+++ b/src/main/resources/static/homestyle.css
@@ -4,13 +4,13 @@
     font-family: sans-serif;
 }
 
-.tableFixHead          { overflow: auto; height: 100px; }
+.tableFixHead          { overflow: auto; height: 450px; }
 .tableFixHead thead th { position: sticky; top: 0; z-index: 1; }
 
 /* Just common table stuff. Really. */
 table  { border-collapse: collapse; width: 100%; }
 th, td { padding: 8px 16px; }
-th     { background:#eee; }
+th     { background:#5ebc67; }
 
 .social-icons{
     position: absolute;
