--- a/src/main/resources/static/homestyle.css
+++ b/src/main/resources/static/homestyle.css
@@ -49,7 +49,7 @@ btn:hover {
     padding: 0px 0;
     display: flex;
     align-items: center;
-    justify-content:space-between ;
+    justify-content:space-between;
 }
 .logo{
     width: 120px;
@@ -82,4 +82,19 @@ btn:hover {
 .welcomemessage{
 color: white;
     font-size: 30px;
+}
+.navbar a{
+    text-align: left;
+}
+.navbar ul{
+    justify-content: right;
+}
+.navbar .nav{
+    text-align: center;
+}
+.navbar .welcomemessage{
+    text-align: right;
+}
+.navbar .logo{
+    text-align: left;
 }
