--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -11,23 +11,23 @@
 <body>
 <div align="center">
 
-  <h1>Search Employee</h1>
+  <h1>Bevétel:</h1>
   <br />
   <div class="col-sm-4">
 
     <form action="#" data-th-action="@{/search}" method="post">
       <div alight="left">
         <tr>
-          <label class="form-label" >Year</label>
+          <label class="form-label" >Év</label>
           <td>
-            <input type="number" name="year" class="form-control" placeholder="Year" />
+            <input type="number" name="year" class="form-control" placeholder="Év" />
           </td>
         </tr>
       </div>
 
       <br>
       <tr>
-        <td colspan="2"><button type="submit" class="btn btn-info">Search</button> </td>
+        <td colspan="2"><button type="submit" class="btn btn-info">Keresés</button> </td>
       </tr>
 
 
