--- a/src/main/resources/static/homestyle.css
+++ b/src/main/resources/static/homestyle.css
@@ -4,7 +4,7 @@
     font-family: sans-serif;
 }
 
-.tableFixHead          { overflow: auto; height: 450px; }
+.tableFixHead          { overflow: auto; height: 450px; text-align: center; color:white}
 .tableFixHead thead th { position: sticky; top: 0; z-index: 1; }
 
 /* Just common table stuff. Really. */
@@ -24,7 +24,7 @@ th     { background:#5ebc67; }
 }
 .btn{
     color: #ffffff;
-    background-color: #34a290;
+    background-color: #5ebc67;
     font-size: 10px;
     border: 0px solid #2d63c8;
     border-radius: 100px;
@@ -34,7 +34,7 @@ th     { background:#5ebc67; }
 }
 btn:hover {
     color: #ffffff;
-    background-color: #3a9283;
+    background-color: #5ebc67;
 }
 .banner{
     width: 100%;
@@ -70,7 +70,7 @@ btn:hover {
     content: '';
     height: 3px;
     width: 0;
-    background: #009688;
+    background: #5ebc67;
     position: absolute;
     left: 0;
     bottom: -10px;
