--- a/src/main/resources/static/registerstyle.css
+++ b/src/main/resources/static/registerstyle.css
@@ -121,3 +121,75 @@ button{
 .social i{
     margin-right: 4px;
 }
+
+.box{
+    position: relative;
+    width: 300px;
+}
+.box .inputBox{
+    position: relative;
+    width: 100%;
+    padding: 5px;
+    border-radius: 8px;
+}
+.box .inputBox input{
+    position: relative;
+    width: 110%;
+    outline: none;
+    border: none;
+    padding: 10px 5px;
+}
+
+.inputBox #toggleBtn{
+    position: absolute;
+    top: 14px;
+    right: -18px;
+    width: 28px;
+    height: 28px;
+    background: rgb(0,0,0,0.5);
+    border-radius: 50%;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.inputBox #toggleBtn::before{
+    content:'\f06e';
+    font-family: fontAwesome;
+}
+.inputBox #toggleBtn.hide::before{
+    content:'\f070';
+}.validation{
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 8px;
+ }
+.validation ul {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+.validation ul li.valid {
+    color: rgba(255,255,255,0.5);
+}
+
+.validation ul li {
+    position: relative;
+    list-style: none;
+    color: white;
+    font-size: 0.85em;
+    transition: 0.5s;
+}
+.validation ul li::before {
+    content: '\f192';
+    width: 20px;
+    height: 10px;
+    font-family: fontAwesome;
+    display: inline-flex;
+}
+.validation ul li.valid::before {
+    content: '\f00c';
+    color: #0f0;
+}
+
