--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="registerstyle.css">
 </head>
 <body>
@@ -23,9 +24,74 @@
         <div>
             <div>
                 <label>Jelszó:</label>
-                <div>
-                    <input type="password" data-th-field="*{password}" required/>
+                <div class="box">
+                    <div class="inputBox">
+                        <input type="password" id="pswrd" data-th-field="*{password}" onkeyup="checkPassword(this.value)" required/>
+                        <span id="toggleBtn"></span>
+                    </div>
+                    <div class="validation">
+                        <ul>
+                            <li id="lower">Legalább 1 kisbetű</li>
+                            <li id="upper">Legalább 1 nagybetű</li>
+                            <li id="number">Legalább 1 szám</li>
+                            <li id="special">Legalább 1 különleges karakter</li>
+                            <li id="length">Legalább 8 karakter</li>
+                        </ul>
+                    </div>
                 </div>
+                <script> //show, hide password
+                    let pswrd = document.getElementById('pswrd')
+                    let toggleBtn = document.getElementById('toggleBtn')
+                    let lowerCase = document.getElementById('lower')
+                    let upperCase = document.getElementById('upper')
+                    let digit = document.getElementById('number')
+                    let specialChar = document.getElementById('special')
+                    let minLength = document.getElementById('length')
+
+                function checkPassword(data){
+                        const lower = new RegExp('(?=.*[a-z])')
+                        const upper = new RegExp('(?=.*[A-Z])')
+                        const number = new RegExp('(?=.*[0-9])')
+                        const special = new RegExp('(?=.*[!@#\$%\^&\*])')
+                        const length = new RegExp('(?=.{8,})')
+
+                    if (lower.test(data)){
+                        lowerCase.classList.add('valid');
+                    }else{
+                        lowerCase.classList.remove('valid');
+                    }
+                    if (upper.test(data)){
+                        upperCase.classList.add('valid');
+                    }else{
+                        upperCase.classList.remove('valid');
+                    }
+                    if (number.test(data)){
+                        digit.classList.add('valid');
+                    }else{
+                        digit.classList.remove('valid');
+                    }
+                    if (special.test(data)){
+                        specialChar.classList.add('valid');
+                    }else{
+                        specialChar.classList.remove('valid');
+                    }
+                    if (length.test(data)){
+                        minLength.classList.add('valid');
+                    }else{
+                        minLength.classList.remove('valid');
+                    }
+                }
+                //lowerCase validitaion check
+                toggleBtn.onclick = function (){
+                        if (pswrd.type === 'password'){
+                            pswrd.setAttribute('type','text');
+                            toggleBtn.classList.add('hide')
+                        }else {
+                            pswrd.setAttribute('type','password');
+                            toggleBtn.classList.remove('hide')
+                        }
+                }
+                </script>
             </div>
         </div>
         <div>
