--- a/src/main/resources/static/homestyle.css
+++ b/src/main/resources/static/homestyle.css
@@ -4,7 +4,7 @@
     font-family: sans-serif;
 }
 
-.tableFixHead          { overflow: auto; height: 450px; text-align: center; color:white}
+.tableFixHead          { overflow: auto; height: 500px; text-align: center; color:white ; position:absolute; left:10%; right: 10%; top:18% }
 .tableFixHead thead th { position: sticky; top: 0; z-index: 1; }
 
 /* Just common table stuff. Really. */
@@ -84,6 +84,7 @@ btn:hover {
 .welcomemessage{
 color: white;
     font-size: 20px;
+    position:absolute; right: 4%; top:3%
 }
 .navbar a{
     text-align: left;
@@ -93,6 +94,7 @@ color: white;
 }
 .navbar .nav{
     text-align: center;
+   position:absolute; left:20%; right: 20%; top:10%
 }
 .navbar .welcomemessage{
     text-align: right;
