--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -33,17 +33,25 @@
              <th>Cikkszám</th>
              <th>EAN kód</th>
              <th>Terméknév</th>
-             <th>Mennyiség</th>
+             <th>Készlet</th>
              <th>Ár</th>
+             <th>Mennyiség</th>
            </tr>
            </thead>
            <tbody>
-           <tr data-th-each="product: ${products}">
-             <td data-th-text="${product.articleNumber}"></td>
-             <td data-th-text="${product.EANCode}"></td>
-             <td data-th-text="${product.articleName}"></td>
-             <td data-th-text="${product.quantity}"></td>
-             <td data-th-text="${product.price}"></td>
+           <tr data-th-each="datas,itemStat:${products}">
+
+               <td th:text="${datas.articleNumber}">Name:</td>
+
+               <td th:text="${datas.EANCode}">Name:</td>
+
+               <td th:text="${datas.articleName}">Name:</td>
+
+               <td th:text="${datas.quantity}">Name:</td>
+
+               <td th:text="${datas.price}">Name:</td>
+
+               <td><form method="post" data-th-action="@{/home/{EANCode}(EANCode=${datas.EANCode})}"><input type="number" name="quantity"><button type="submit">Hozzáadás kosárhoz</button></form></td>
            </tr>
            </tbody>
          </table>
