--- a/src/main/resources/templates/new_home.html
+++ b/src/main/resources/templates/new_home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/new_home.css">
 </head>
 <header>
-    <nav>
+    <nav id="navbar">
         <div class="menu">
             <div>
                 <img src="sales2.png" class="logo" alt="">
