--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,9 +14,9 @@
         </div>
         <div  class="nav">
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Home</a></li>
-      <li><a data-th-href="@{/userprofile}">Account</a></li>
+      <li><a href="#">Kezdőlap</a></li>
+        <li><a data-th-href="@{/cart}">Kosár</a></li>
+      <li><a data-th-href="@{/userprofile}">Profil</a></li>
     </ul>
   </div>
     <div class="welcomemessage">
