Connections html letrehozasa, style2 css endpoint letrehozasa

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,6 +13,7 @@
       <li><a href="#">Home</a></li>
       <li><a href="#">Home</a></li>
       <li><a data-th-href="@{/userprofile}">Account</a></li>
+      <li><a data-th-href="@{/connections}">Kapcsolat</a></li>
     </ul>
     <div class="welcomemessage">
       <form th:action="@{/logout}" method="post">
