--- a/src/main/resources/templates/userprofile.html
+++ b/src/main/resources/templates/userprofile.html
@@ -3,8 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="/new_home.css">
 </head>
 <body>
+<header>
+    <nav id="navbar">
+        <div class="menu">
+            <div>
+                <img src="sales2.png" class="logo" alt="">
+                <ul>
+                    <li><a href="#">Újdonságok</a> </li>
+                </ul>
+                <ul class="inputBox">
+                    <li><span id="toggleProjects">    </span><a href="#">Projektek</a></li>
+                    <li><span id="toggleNews">    </span><a href="#">Újdonságok</a></li>
+                    <li><span id="toggleMarket">    </span><a href="#">Bolt</a></li>
+                    <li><span id="toggleCart">    </span><a href="#">Kosár</a></li>
+                    <li><span id="toggleAbout">    </span><a href="#">Rólunk</a></li>
+                    <li><span id="toggleDoor">    </span><a href="/logout">Kijelentkezés</a></li>
+                </ul>
+                <ul class="social-media">
+                    <h5>Kövess minket!</h5>
+                    <li><a href="https://facebook.com/"><img data-th-src="@{facebook.png}"></a></li>
+                    <li><a href="https://www.instagram.com/"><img data-th-src="@{instagram.png}"></a></li>
+                    <li><a href="https://www.linkedin.com/"><img data-th-src="@{linkedin.png}"></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="container">
+            <a href="#" class="brand"><p>
+                Welcome <b>[[${#request.userPrincipal.principal.companyName}]]</b>
+            </p></a>
+            <div class="container-inner">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <form action="">
+                    <div class="input-wrap">
+                        <input type="search" placeholder="Keresés"/>
+                        <button type="submit">
+                            <i class="fas fa-search"></i>
+                        </button>
+                    </div>
+                </form>
+            </div>
+            <i class="fas fa-bars" id="menu-btn"></i>
+        </div>
+    </nav>
+</header>
+<body>
+<script>
+    const menBtn = document.getElementById('menu-btn');
+    const navBar = document.getElementById('navbar');
+    const menu = document.querySelector('.menu');
+
+    const offset = 30;
+    menBtn.addEventListener('click',() => {
+        menu.classList.toggle('menu-open');
+    });
+    window.addEventListener("scroll",() => {
+        if (pageYOffset > offset) {
+            navBar.classList.add('navbar-active');
+        } else {
+            navBar.classList.remove('navbar-active')
+        }
+    });
+    window.addEventListener("scroll", ()=> {
+        if (pageXOffset > offset) {
+            navBar.classList.add('navbar-active');
+        } else {
+            navBar.classList.remove('navbar-active');
+        }
+    });
+
+
+
+</script>
 <h1>Account</h1>
 
 <table>
