--- a/src/main/resources/static/new_home.css
+++ b/src/main/resources/static/new_home.css
@@ -1,6 +1,11 @@
 body{
     margin: 0;
     font-family:Helvetica,sans-serif;
+    background: rgba(0,0,0,0.3) url("background.png")
+    no-repeat center;
+    background-size: cover;
+    background-blend-mode: darken;
+    min-height: 100vh;
 }
 *{
     box-sizing: border-box;
@@ -10,11 +15,7 @@ ul{
     padding: 0;
 }
 header{
-    min-height: 100vh;
-    background: rgba(0,0,0,0.3) url("background.png")
-        no-repeat center;
-    background-size: cover;
-    background-blend-mode: darken;
+    min-height: 15vh;
 }
 main {
     padding: 2em;
@@ -47,7 +48,7 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
-    padding: 2em;
+    padding: 0.2em;
     z-index: 9;
     transition: 0.7s;
     color: #fff;
@@ -87,20 +88,34 @@ nav a:hover {
     justify-content: center;
     align-items: center;
     padding: 0.5em 0;
+
 }
-form input, form button {
-    background: none;
+form{
+    height: 340px;
+    width: 400px;
+    background-color: rgba(255,255,255,0.13);
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 380px;
+    left: 50%;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    border: 2px solid rgba(255,255,255,0.1);
+    box-shadow: 0 0 40px rgba(8,7,16,0.6);
+    padding: 50px 35px;
+}
+form *{
+    font-family: 'Poppins',sans-serif;
+    color: #ffffff;
+    letter-spacing: 0.5px;
+    outline: none;
     border: none;
-    color: #fff;
 }
-form button {
-    cursor: pointer;
-}
-form input::placeholder {
-    color: #fff;
-}
-form input:focus {
-    outline:none;
+form h3{
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 42px;
+    text-align: center;
 }
 nav.fa-bars {
     font-size: 1.2em;
