--- a/src/main/resources/templates/new_home.html
+++ b/src/main/resources/templates/new_home.html
@@ -39,20 +39,17 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
-                <form action="">
-                    <div class="input-wrap">
-                        <input type="search" placeholder="Keresés"/>
-                        <button type="submit">
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </div>
-                </form>
             </div>
             <i class="fas fa-bars" id="menu-btn"></i>
         </div>
     </nav>
 </header>
 <body>
+<form action="">
+    <div class="input-wrap">
+        <button >Belépés</button>
+    </div>
+</form>
 <script>
     const menBtn = document.getElementById('menu-btn');
     const navBar = document.getElementById('navbar');
@@ -80,6 +77,10 @@
 
 
 </script>
+<div id="container">
+    <div class="form">
 
+    </div>
+</div>
 </body>
 </html>
